--- a/package.json
+++ b/package.json
@@ -10,16 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vue": "^4.5.0",
-    "@splidejs/splide": "^4.1.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.10",
-    "vue": "^3.5.2"
+    "tailwindcss": "^3.4.10"
   }
 }
