--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^4.15.2",
     "flowbite": "^2.5.1",
     "tailwindcss": "^3.4.10"
+  },
+  "devDependencies": {
+    "tsconfig-paths": "^4.2.0"
   }
 }
