--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^3.1.7",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.15.2",
     "flowbite": "^2.5.1",
