--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
